--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ BOOmates/Temp/UnityLockfile
 BOOmates/.vs/BOOmates/v15/Server/sqlite3/db.lock
 
 BOOmates/Library/
+
+BOOmates/Logs/
+
+BOOmates/obj/
