--- a/BOOmates/Assembly-CSharp.csproj
+++ b/BOOmates/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\LightScript.cs" />
     <Compile Include="Assets\Scripts\Archived\GhostMovement.cs" />
     <Compile Include="Assets\Scripts\Controller.cs" />
     <Compile Include="Assets\Scripts\GhostController.cs" />
