--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ BOOmates/Temp/UnityLockfile
 
 
 BOOmates/.vs/BOOmates/v15/Server/sqlite3/db.lock
+BOOmates/.vs/BOOmates/v16/Server/sqlite3/storage.ide
+BOOmates/.vs/BOOmates/v16/Server/sqlite3/storage.ide-wal
