--- a/BOOmates/Assembly-CSharp.csproj
+++ b/BOOmates/Assembly-CSharp.csproj
@@ -63,11 +63,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\LightScript.cs" />
     <Compile Include="Assets\Scripts\Archived\GhostMovement.cs" />
     <Compile Include="Assets\Scripts\Controller.cs" />
     <Compile Include="Assets\Scripts\GhostController.cs" />
     <Compile Include="Assets\Scripts\Impact.cs" />
+    <Compile Include="Assets\Scripts\LightScript.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/Aaron/Desktop/BOOmates/BOOmates/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
